--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "kurukuruts",
+  "name": "nokiajam",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "/kuruts",
+  "homepage": "/nokiajam",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
